--- a/misc/admin.css
+++ b/misc/admin.css
@@ -6,8 +6,6 @@ body {
 body, th, td, h1, h2, h3, h4, #menu, #main {
   font-family: helvetica, arial;
 }
-a {
-}
 a:link {
   color: #059;
 }
@@ -17,67 +15,76 @@ a:visited {
 h1 {
   font-size: 1.3em;
   font-weight: bold;
-  color: #000066;
+  color: #006;
 }
 h2 {
   font-size: 1.3em;
   font-weight: bold;
-  color: #000066;
+  color: #006;
   margin: 0;
   padding: 0 0 .5em 0;
 }
 h3 {
   font-size: 1.2em;
   font-weight: bold;
-  color: #006600;
+  color: #006;
   margin: 0;
   padding: 0 0 .5em 0;
 }
 th {
-  text-align: center;
-  color: #994444;
-  border-bottom: 1px solid #000;
+  text-align: left;
+  color: #006;
+  border-bottom: 1px solid #ccc;
 }
 tr.dark {
-  background-color: #ccc;
-}
-tr.light {
   background-color: #ddd;
 }
+tr.light {
+  background-color: #fff;
+}
 td {
-  font-size: 90%;
   padding: 5px;
+  font-size: 90%;
+}
+hr {
+  margin: .5em 0;
+  height: 1px; 
+  color: #ccc;
 }
 #menu {
   position: absolute;
   left: 0px;
   top: 0px;
-  padding: 1em 0 1em 0;
+  margin: 0 0 0 0;
+  padding: 0 0 .85em 0;
   width: 200px;
   z-index: 1;
   overflow: hidden;
-  background-color: #6699cc;
+  background-color: #69c;
   border-right: 1px solid #999;
   border-bottom: 1px solid #999;
 }
-#menu h1 a {
+#menu h1 {
+  background-color: #369;
   display: block;
-  margin: 0;
-  padding: 0 0 .2em .6em;
+  margin: 0 0 .85em 0;
+  padding: 1em 0 .2em .6em;
+  border-top: 1px solid #69c;
+  border-bottom: 1px solid #90bade;
+}
+#menu h1 a {
   color: #fff;
   text-decoration: none;
-  border-bottom: 1px dotted #90bade;
 }
 #menu ul {
   list-style: none;
-  margin: 0 0 0 0;
-  padding: 0 0 0 .75em;
+  margin: 0;
+  padding: 0 0 0 .85em;
   border: none;
 }
 #menu li {
   margin: 0;
-  padding: .25em .25em .25em 0;
-  border-bottom: 1px dotted #90bade;
+  padding: .25em .25em .4em 0;
 }
 #menu li a {
   display: block;
