- Added missing footer logic.  Patch by Ax.

--- a/themes/xtemplate/xtemplate.css
+++ b/themes/xtemplate/xtemplate.css
@@ -78,6 +78,11 @@ img {
 #sidebar {
   background-color: #ddd;
 }
+#footer {
+  background-color: #eee;
+  padding: 15px 10px 5px 10px;
+  font-size: .7em;
+}
 table .node {
   padding-bottom: 25px;
 }
