--- a/themes/xtemplate/xtemplate.css
+++ b/themes/xtemplate/xtemplate.css
@@ -31,6 +31,7 @@ img {
 .header .menu {
   background-color: #69c;
   padding: 5px 5px 0px 5px;
+  width: 100%;
 }
 .menu logo {
   vertical-align: bottom;
