--- a/themes/xtemplate/xtemplate.css
+++ b/themes/xtemplate/xtemplate.css
@@ -4,9 +4,19 @@ body {
   color: #000000;
   background-color: #fff;
   font-family: verdana, arial, helvetica, sans-serif;
+  width: 100%;
 }
 body, td, tr {
   font-size: 90%;
+}
+h1 {
+  font-size: 1.2em;
+}
+h2 {
+  font-size: 1.1em;
+}
+h3, h4, h5, h6 {
+  font-size: 1em;
 }
 a {
   text-decoration: none;
@@ -28,10 +38,12 @@ p {
 img {
   border-width: 0;
 }
+.header {
+  width: 100%;
+}
 .header .menu {
   background-color: #69c;
   padding: 5px 5px 0px 5px;
-  width: 100%;
 }
 .menu logo {
   vertical-align: bottom;
@@ -69,12 +81,12 @@ img {
 }
 #message {
   background-color: #369;
-  padding: 10px 10px 10px 10px;
+  padding: 20px 20px 20px 25px;
   color: #fff;
 }
 #message a, #message a:visited {
   color: #9cf;
-  font-weight:bold;
+  font-weight: bold;
 }
 #main {
   margin: 10px 10px 10px 10px;
@@ -96,15 +108,15 @@ table .block, table .box {
   margin: 5px 0px 5px 0px;
 }
 table .comment {
-  border: 1px solid #bbb;
+  border: 1px solid #ccc;
   padding: 15px 15px 15px 15px;
   margin: 5px 0px 5px 0px;
 }
 .node .title, .block .title, .box .title, .node .title a, .box .title a {
   padding-bottom: 5px;
   font-weight: bold;
-  font-size: 1.2em;
-  color: #888;
+  font-size: 1.3em;
+  color: #777;
 }
 .node .author, .comment .author {
   color: #999;
@@ -133,7 +145,7 @@ table .comment {
 .comment .title {
   font-weight: bold;
   font-size: 1.1em;
-  color: #888;
+  color: #777;
 }
 .comment .new {
   text-align: right;
@@ -145,4 +157,3 @@ table .comment {
 .block .content, .box .content {
   font-size: 0.9em/1.1em;
 }
-
