--- a/themes/xtemplate/xtemplate.css
+++ b/themes/xtemplate/xtemplate.css
@@ -9,6 +9,12 @@ body {
 body {
   font-size: 85%;
 }
+tr.dark {
+  background-color: #ddd;
+}
+tr.light {
+  background-color: #fff;
+}
 h1 {
   font-size: 1.2em;
 }
@@ -97,6 +103,7 @@ img {
 }
 #sidebar {
   background-color: #ddd;
+  font-size: .9em;
 }
 #footer {
   background-color: #eee;
