--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -1,15 +1,19 @@
-.item-list .title  { font-weight: bold; }
-.item-list ul      { margin: 0 0 0.75em 0; padding: 0; }
-.item-list ul li   { margin: 0 0 0.25em 1.5em; padding: 0; list-style: disc; }
+.item-list .title         { font-weight: bold; }
+.item-list ul             { margin: 0 0 0.75em 0; padding: 0; }
+.item-list ul li          { margin: 0 0 0.25em 1.5em; padding: 0; list-style: disc; }
 
-.item-list .icon         { color: #555; float: right; padding-left: 0.25em; }
-.item-list .icon a       { color: #000; text-decoration: none; }
-.item-list .icon a:hover { color: #000; text-decoration: none; }
+.item-list .icon          { color: #555; float: right; padding-left: 0.25em; }
+.item-list .icon a        { color: #000; text-decoration: none; }
+.item-list .icon a:hover  { color: #000; text-decoration: none; }
 
-.poll-foreground   { background-color: #000; float: left; height: 1em; }
-.poll-background   { background-color: #ddd; float: left; height: 1em; }
+.poll .bar                { height: 1em; }
+.poll .bar .foreground    { background-color: #000; float: left; height: 1em; }
+.poll .bar .background    { background-color: #ddd; float: left; height: 1em; }
+.poll .percent            { text-align: right; }
+.poll .links              { text-align: center; }
+.poll .total              { text-align: center; }
 
-.form-item .title  { font-weight: bold; margin-top: 1.1em; margin-bottom: 1px; }
-.form-item .description { font-size: 0.85em; }
+.form-item .title         { font-weight: bold; margin-top: 1.1em; margin-bottom: 1px; }
+.form-item .description   { font-size: 0.85em; }
 
-.container-inline div { display: inline; }
+.container-inline div     { display: inline; }
