--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -13,6 +13,13 @@
 .poll .links              { text-align: center; }
 .poll .total              { text-align: center; }
 
+.calendar a               { text-decoration: none; }
+.calendar a:hover         { text-decoration: none; }
+.calendar table           { border-collapse: collapse; }
+.calendar td              { text-align: center; border: 1px solid #000; padding: 1px; margin: 0; font-size: 0.8em; }
+.calendar .row-week td a  { display: block; }
+.calendar .row-week td a:hover { background-color: #888; color: #fff; }
+
 .form-item .title         { font-weight: bold; margin-top: 1.1em; margin-bottom: 1px; }
 .form-item .description   { font-size: 0.85em; }
 
