--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -1,36 +1,38 @@
-.item-list .title         { font-weight: bold; }
-.item-list ul             { margin: 0 0 0.75em 0; padding: 0; }
-.item-list ul li          { margin: 0 0 0.25em 1.5em; padding: 0; list-style: disc; }
-
-.item-list .icon          { color: #555; float: right; padding-left: 0.25em; }
-.item-list .icon a        { color: #000; text-decoration: none; }
-.item-list .icon a:hover  { color: #000; text-decoration: none; }
-
-tr.dark                   { background-color: #ddd; }
-tr.light                  { background-color: #eee; }
-
 #tracker table            { border-collapse: collapse; }
-#tracker th               { text-align: left; padding: 0.25em 1em; }
 #tracker td               { vertical-align: top; padding: 1em; }
 #tracker td ul            { margin-top: 0; margin-bottom: 0; }
 #tracker td ul a          { font-weight: normal; }
+#tracker th               { text-align: left; padding: 0.25em 1em; }
 
-.poll .bar                { height: 1em; }
-.poll .bar .foreground    { background-color: #000; float: left; height: 1em; }
-.poll .bar .background    { background-color: #ddd; float: left; height: 1em; }
-.poll .percent            { text-align: right; }
-.poll .links              { text-align: center; }
-.poll .total              { text-align: center; }
-
+.calendar .row-week td a  { display: block; }
+.calendar .row-week td a:hover { background-color: #888; color: #fff; }
 .calendar a               { text-decoration: none; }
 .calendar a:hover         { text-decoration: none; }
 .calendar table           { border-collapse: collapse; }
 .calendar td              { text-align: center; border: 1px solid #000; padding: 1px; margin: 0; font-size: 0.8em; }
-.calendar .row-week td a  { display: block; }
-.calendar .row-week td a:hover { background-color: #888; color: #fff; }
-
-.form-item .title         { font-weight: bold; margin-top: 1.1em; margin-bottom: 1px; }
-.form-item .description   { font-size: 0.85em; }
-.form-submit              { margin-top: 1em; }
 
 .container-inline div     { display: inline; }
+
+.form-item .description   { font-size: 0.85em; }
+.form-item .title         { font-weight: bold; margin-top: 1.1em; margin-bottom: 1px; }
+.form-submit              { margin-top: 1em; }
+
+.item-list .icon          { color: #555; float: right; padding-left: 0.25em; }
+.item-list .icon a        { color: #000; text-decoration: none; }
+.item-list .icon a:hover  { color: #000; text-decoration: none; }
+.item-list .title         { font-weight: bold; }
+.item-list ul             { margin: 0 0 0.75em 0; padding: 0; }
+.item-list ul li          { margin: 0 0 0.25em 1.5em; padding: 0; list-style: disc; }
+
+.poll .bar                { height: 1em; }
+.poll .bar .background    { background-color: #ddd; float: left; height: 1em; }
+.poll .bar .foreground    { background-color: #000; float: left; height: 1em; }
+.poll .links              { text-align: center; }
+.poll .percent            { text-align: right; }
+.poll .total              { text-align: center; }
+
+.user-login-block         { text-align: center; }
+
+tr.dark                   { background-color: #ddd; }
+tr.light                  { background-color: #eee; }
+
