- Bugfix: better charset support for non-ISO-8859-1 languages.  Patch 0029.charset.fixes.patch by Al.  Could East Asia test this please.
- Bugfix: made the "moderate" field behave.  Patch 0030.queue.module.help.and.settings.form.patch by Al.

- Documentation: revised a large part of the help texts / documentation!  Al's 0024.* patches.

- Documentation: added a glossary to the help module.  Patch 0025.help.module.glossary.patch by Al and Michael.

- Usability: first step towards unifying the terminology used in the cloud module.  Patch by 0028.site.cloud.rationalize.name.patch Al.

- Usability + CSS improvements: revamped the node form and removed all tables.  Patch 0027.node.form.rewrite.patch by Al.

- CSS improvements: patch 0026.admin.css.small.improvement.patch by Al.

- Updated the MAINTAINERS file.

--- a/misc/admin.css
+++ b/misc/admin.css
@@ -22,14 +22,14 @@ h2 {
   font-weight: bold;
   color: #006;
   margin: 0;
-  padding: 0 0 .5em 0;
+  padding: 0 0 0.5em 0;
 }
 h3 {
   font-size: 1.2em;
   font-weight: bold;
   color: #006;
   margin: 0;
-  padding: 0 0 .5em 0;
+  padding: 1em 0 0 0;
 }
 table {
   border-collapse: collapse;
@@ -126,4 +126,23 @@ dd {
 }
 #update {
   padding: 1em 1em 1em 1em;
+}
+.node-form .admin {
+  float: none; width: auto; margin-top: 0;
+}
+.node-form .standard {
+  margin-right: 0;
+  clear: both;
+}
+.node-form .admin .form-item .title {
+  margin-top: 0;
+}
+.node-form .admin .authored .form-item {
+  margin-bottom: 1.1em;
+}
+.node-form .admin .authored, .node-form .admin .options, .node-form .admin .extra {
+  float: left; margin-right: 2em; margin-bottom: 1em;
+}
+.node-form .admin .form-item .form-text {
+  width: auto;
 }
