- Documentation improvements: improved and updated the block module documentation.  Patch #44 by Al.  We should add some real-life path examples!
- Fixed the "blog it" image size.  Patch #49 by Al.

- Some SQL performance improvements to the forum module.  This should also be more PostgreSQL safe.  Patch by me.

mysql> SELECT n.nid, n.created AS timestamp, u.name AS name, u.uid AS uid FROM forum f, node n LEFT JOIN users u ON n.uid = u.uid WHERE f.tid = 2 AND n.nid = f.nid AND n.type = 'forum' AND n.status = 1 ORDER BY timestamp DESC LIMIT 1, 0;
==> 0.63 sec

changed to:

mysql> SELECT n.nid, n.created AS timestamp, u.name AS name, u.uid AS uid FROM forum f LEFT JOIN node n ON n.nid = f.nid LEFT JOIN users u ON n.uid = u.uid WHERE f.tid = 2 AND n.nid = f.nid AND n.type = 'forum' AND n.status = 1 ORDER BY timestamp DESC LIMIT 1, 0;
==> 0.00 sec

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -31,7 +31,7 @@ th {
 .form-item .title         { font-weight: bold; margin-top: 1.1em; margin-bottom: 1px; }
 .form-submit              { margin: 0.5em 0; }
 
-.item-list .icon          { color: #555; float: right; padding-left: 0.25em; }
+.item-list .icon          { color: #555; float: right; padding-left: 0.25em; clear: right; }
 .item-list .icon a        { color: #000; text-decoration: none; }
 .item-list .icon a:hover  { color: #000; text-decoration: none; }
 .item-list .title         { font-weight: bold; }
