--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -48,10 +48,23 @@ th {
 
 .poll .vote-form .choices { text-align: left; margin: 0 auto; display: table; }
 
-.node-form .admin         { float: right; width: 15em; margin-top: -1.1em; }
-.node-form .standard      { margin-right: 15em; }
-.node-form .form-text     { display: block; }
-.node-form textarea       { display: block; }
+.node-form .form-text     { display: block; width: 95%; }
+.node-form textarea       { display: block; width: 95%; }
+
+.node-form .standard {
+  clear: both;
+}
+.node-form .admin .form-item .title {
+  margin-top: 0;
+}
+.node-form .admin .authored .form-item {
+  margin-bottom: 1.1em;
+}
+.node-form .admin .authored .form-text { width: auto; }
+
+.node-form .admin .authored, .node-form .admin .options, .node-form .admin .extra {
+  float: left; margin-right: 2em; margin-bottom: 1em;
+}
 
 .marker                   { color: #f00; }
 .error                    { color: #f00; }
