--- a/themes/marvin/marvin.css
+++ b/themes/marvin/marvin.css
@@ -14,6 +14,7 @@ h2 {
 h3, h4, h5, h6 {
   font-size: 1em;
 }
+
 p {
   margin: 0 0 1em 0;
   padding: 0;
@@ -24,8 +25,27 @@ img {
 table {
   font-size: 1em;
 }
-.calendar .day-today      { background-color: #ccc; }
-.calendar .day-selected   { background-color: #bbb; }
-.calendar .header-month   { background-color: #ddd; }
-.calendar .header-week    { background-color: #ccc; }
-.calendar .day-blank      { background-color: #ddd; }
+.calendar .day-today {
+  background-color: #ccc;
+}
+.calendar .day-selected {
+  background-color: #bbb;
+}
+.calendar .header-month {
+  background-color: #ddd;
+}
+.calendar .header-week {
+  background-color: #ccc;
+}
+.calendar .day-blank {
+  background-color: #ddd;
+}
+a:link {
+  color: #656
+}
+a:visited {
+  color: #656
+}
+a:active {
+  color: #ccc
+}
