- Improvement: made theme Marvin's calendar look better.  Patch #16 by Al.   Thanks!

--- a/themes/marvin/marvin.css
+++ b/themes/marvin/marvin.css
@@ -40,6 +40,12 @@ table {
 .calendar .day-blank {
   background-color: #ddd;
 }
+.calendar .day-link a {
+  color: #000;
+}
+.calendar .row-week {
+  color: #aaa;
+}
 a:link {
   color: #656
 }
