- Made <pre> wrap.  Patch #21 by Al.

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -76,4 +76,4 @@ th                        { text-align: left; padding-right: 1em; border-bottom:
 
 tr.dark                   { background-color: #ddd; }
 tr.light                  { background-color: #eee; }
-
+pre                       { white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -o-pre-wrap; white-space: -pre-wrap;}
